# the-funnies

./: README.md
first/: output.txt  program.c
fourth/pyjs/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  test.js  tsconfig.json
fourth/pyjs/src/: index.ts  lib.rs
second/: requirements.txt  sigh.py
third/: sampleinput.txt  wtmoo.hs
